--- a/web.config
+++ b/web.config
@@ -1,9 +1,12 @@
-<?xml version="1.0"?>
 <configuration>
 	<system.webServer>
+		<staticContent>
+			<mimeMap fileExtension=".json" mimeType="application/json" />
+			<mimeMap fileExtension=".js" mimeType="application/javascript" />
+		</staticContent>
 		<rewrite>
 			<rules>
-				<rule name="React Routes" stopProcessing="true">
+				<rule name="React Router" stopProcessing="true">
 					<match url=".*" />
 					<conditions logicalGrouping="MatchAll">
 						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
