Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_azuresmartsaver.yml
+++ b/.github/workflows/main_azuresmartsaver.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -19,19 +19,22 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '18.x'
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,17 +50,20 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5B31AA052EA84231BA4D22D5B591E251 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A9598F315D5144848C0D9E15F5A53332 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D28167462D914E8DAB1F750FB925DC06 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_37A614E841D945BA9659EB02D45E534B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D0537269DA9A40AF85FA50517EA87C11 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_348F9A58D33246979E4CB4CD08AC6CAA }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
           app-name: 'azuresmartsaver'
           slot-name: 'Production'
